Add logistic regression model

--- a/assignments/03/codes/bagging_model.ipynb
+++ b/assignments/03/codes/bagging_model.ipynb
@@ -93,92 +93,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Feature 1 (Discrete)</th>\n",
-              "      <th>Feature 2 (Discrete)</th>\n",
-              "      <th>Feature 3 (Discrete)</th>\n",
-              "      <th>Feature 4 (Discrete)</th>\n",
-              "      <th>Feature 5 (Discrete)</th>\n",
-              "      <th>Feature 6 (Discrete)</th>\n",
-              "      <th>Feature 7 (Discrete)</th>\n",
-              "      <th>Feature 8 (Discrete)</th>\n",
-              "      <th>Feature 9</th>\n",
-              "      <th>Feature 10</th>\n",
-              "      <th>Feature 11</th>\n",
-              "      <th>Feature 12</th>\n",
-              "      <th>Feature 13</th>\n",
-              "      <th>Feature 14</th>\n",
-              "      <th>Feature 15</th>\n",
-              "      <th>Feature 18</th>\n",
-              "      <th>Feature 19 (Discrete)</th>\n",
-              "      <th>Feature 20 (Discrete)</th>\n",
-              "      <th>Feature 21 (Discrete)</th>\n",
-              "      <th>Feature 22 (Discrete)</th>\n",
-              "      <th>Feature 23 (Discrete)</th>\n",
-              "      <th>Feature 24</th>\n",
-              "      <th>Target Variable (Discrete)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>-0.353006</td>\n",
-              "      <td>1.86527</td>\n",
-              "      <td>-0.952298</td>\n",
-              "      <td>0.419034</td>\n",
-              "      <td>0.141934</td>\n",
-              "      <td>0.560641</td>\n",
-              "      <td>-0.408464</td>\n",
-              "      <td>-0.419865</td>\n",
-              "      <td>0.898656</td>\n",
-              "      <td>1.286632</td>\n",
-              "      <td>1.028634</td>\n",
-              "      <td>-0.182683</td>\n",
-              "      <td>-1.193573</td>\n",
-              "      <td>1.193901</td>\n",
-              "      <td>0.491325</td>\n",
-              "      <td>-0.311962</td>\n",
-              "      <td>-0.609359</td>\n",
-              "      <td>0.970641</td>\n",
-              "      <td>-1.001086</td>\n",
-              "      <td>-0.93296</td>\n",
-              "      <td>-0.354493</td>\n",
-              "      <td>0.491242</td>\n",
-              "      <td>12.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "    Feature 1 (Discrete)  Feature 2 (Discrete)  Feature 3 (Discrete)  Feature 4 (Discrete)  Feature 5 (Discrete)  Feature 6 (Discrete)  Feature 7 (Discrete)  Feature 8 (Discrete)  Feature 9  Feature 10  Feature 11  Feature 12  Feature 13  Feature 14  Feature 15  Feature 18  Feature 19 (Discrete)  Feature 20 (Discrete)  Feature 21 (Discrete)  Feature 22 (Discrete)  Feature 23 (Discrete)  Feature 24  Target Variable (Discrete)\n",
-              "11             -0.353006               1.86527             -0.952298              0.419034              0.141934              0.560641             -0.408464             -0.419865   0.898656    1.286632    1.028634   -0.182683   -1.193573    1.193901    0.491325   -0.311962              -0.609359               0.970641              -1.001086               -0.93296              -0.354493    0.491242                        12.0"
+              "array([[-0.35300642,  1.86526984, -0.95229802,  0.41903394,  0.14193402,\n",
+              "         0.56064079, -0.40846433, -0.41986506,  0.89865619,  1.28663235,\n",
+              "         1.02863444, -0.18268335, -1.19357302,  1.19390121,  0.49132456,\n",
+              "        -0.3119616 , -0.60935857,  0.97064142, -1.00108563, -0.93295979,\n",
+              "        -0.35449325,  0.49124206, 12.        ]])"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,7 +114,7 @@
       "source": [
         "X_train_pd = pd.DataFrame(X_train, columns=df_train.columns[:-1])\n",
         "X_train_pd['Target Variable (Discrete)'] = y_train\n",
-        "X_train_pd.loc[X_train_pd['Target Variable (Discrete)'] == 12.0]"
+        "X_train_pd.loc[X_train_pd['Target Variable (Discrete)'] == 12.0].to_numpy()"
       ]
     },
     {
