--- a/assignments/03/codes/logistic_model.ipynb
+++ b/assignments/03/codes/logistic_model.ipynb
@@ -2,8 +2,10 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
-      "metadata": {},
+      "execution_count": 19,
+      "metadata": {
+        "id": "ftGaqLZDbwIX"
+      },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
@@ -11,12 +13,12 @@
         "pd.options.display.max_columns = None\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import StandardScaler"
+        "from sklearn.preprocessing import StandardScaler, LabelEncoder"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +54,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Target Variable (Discrete)\n",
+              "1.0     488\n",
+              "0.0     249\n",
+              "2.0     109\n",
+              "6.0      70\n",
+              "5.0      41\n",
+              "8.0       7\n",
+              "14.0      5\n",
+              "7.0       5\n",
+              "15.0      4\n",
+              "4.0       3\n",
+              "13.0      3\n",
+              "3.0       3\n",
+              "9.0       2\n",
+              "12.0      1\n",
+              "17.0      1\n",
+              "11.0      1\n",
+              "10.0      1\n",
+              "16.0      1\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_imputed['Target Variable (Discrete)'].value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +116,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2)\n",
+        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
         "\n",
         "print(\"Shape of train_x:\", train_x.shape)\n",
         "print(\"Shape of val_x:\", val_x.shape)\n",
@@ -85,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,45 +140,39 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Bagging Accuracy: 0.914572864321608\n",
-            "Bagging Macro F1 Score: 0.47748150007063\n",
+            "Model Accuracy: 0.7839195979899497\n",
+            "Model Macro F1 Score: 0.3424524681667539\n",
             "\n",
-            "Bagging Classification Report:\n",
+            "Model Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.81      1.00      0.89        42\n",
-            "         1.0       1.00      0.94      0.97       108\n",
-            "         2.0       0.78      0.90      0.84        20\n",
-            "         5.0       0.60      0.60      0.60         5\n",
-            "         6.0       1.00      1.00      1.00        18\n",
+            "         0.0       0.83      0.80      0.82        50\n",
+            "         1.0       0.81      0.97      0.88        91\n",
+            "         2.0       0.54      0.58      0.56        26\n",
+            "         3.0       0.00      0.00      0.00         1\n",
+            "         4.0       0.00      0.00      0.00         1\n",
+            "         5.0       0.50      0.12      0.20         8\n",
+            "         6.0       1.00      1.00      1.00        11\n",
             "         7.0       0.00      0.00      0.00         2\n",
-            "        10.0       0.00      0.00      0.00         1\n",
+            "         8.0       0.00      0.00      0.00         5\n",
+            "        11.0       0.00      0.00      0.00         1\n",
             "        13.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         2\n",
+            "        14.0       1.00      1.00      1.00         1\n",
+            "        15.0       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.91       199\n",
-            "   macro avg       0.47      0.49      0.48       199\n",
-            "weighted avg       0.90      0.91      0.90       199\n",
+            "    accuracy                           0.78       199\n",
+            "   macro avg       0.36      0.34      0.34       199\n",
+            "weighted avg       0.73      0.78      0.75       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
-        "# Initialize models\n",
-        "bagging_model = BaggingClassifier()\n",
-        "extratrees_model = ExtraTreesClassifier()\n",
-        "randomforest_model = RandomForestClassifier()\n",
-        "\n",
-        "model = VotingClassifier(\n",
-        "    estimators=[\n",
-        "        ('rf', randomforest_model),\n",
-        "        ('bg', bagging_model),\n",
-        "        ('et', extratrees_model)\n",
-        "    ], voting='hard'\n",
-        ")\n",
+        "# Initialize Adaboost model\n",
+        "model = LogisticRegression(random_state=42, max_iter=1000)\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(train_x, train_y)\n",
@@ -150,12 +185,12 @@
         "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Bagging Accuracy:\", accuracy)\n",
-        "print(\"Bagging Macro F1 Score:\", macro_f1)\n",
+        "print(\"Model Accuracy:\", accuracy)\n",
+        "print(\"Model Macro F1 Score:\", macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
         "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nBagging Classification Report:\\n\", classification_rep)"
+        "print(\"\\nModel Classification Report:\\n\", classification_rep)"
       ]
     }
   ],
