--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,28 +50,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "\n",
-        "# Initialize Adaboost model\n",
-        "model = ExtraTreesClassifier()\n",
-        "\n",
-        "le = LabelEncoder()\n",
-        "train_y = le.fit_transform(y_train)\n",
-        "\n",
-        "# Train the model on the training data\n",
-        "model.fit(X_train_imputed, train_y)\n",
-        "\n",
-        "# Make predictions on the validation data\n",
-        "predictions = le.inverse_transform(model.predict(X_test))"
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "X_test_scaled = scaler.transform(X_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
+        "\n",
+        "# Initialize models\n",
+        "bagging_model = BaggingClassifier(random_state=42)\n",
+        "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
+        "randomforest_model = RandomForestClassifier(random_state=42)\n",
+        "\n",
+        "model = VotingClassifier(\n",
+        "    estimators=[\n",
+        "        ('rf', randomforest_model),\n",
+        "        ('bg', bagging_model),\n",
+        "        ('et', extratrees_model)\n",
+        "    ], voting='hard'\n",
+        ")\n",
+        "\n",
+        "# Train the model on the training data\n",
+        "model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "predictions = model.predict(X_test_scaled)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([12], dtype=int64)"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "xpred = np.asarray([[-0.35300642,  1.86526984, -0.95229802,  0.41903394,  0.14193402,\n",
+        "         0.56064079, -0.40846433, -0.41986506,  0.89865619,  1.28663235,\n",
+        "         1.02863444, -0.18268335, -1.19357302,  1.19390121,  0.49132456,\n",
+        "        -0.3119616 , -0.60935857,  0.97064142, -1.00108563, -0.93295979,\n",
+        "        -0.35449325,  0.49124206]], dtype=float)\n",
+        "ypred = model.predict(xpred)\n",
+        "ypred"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -79,7 +122,7 @@
         "pred_df['Category'] = predictions\n",
         "pred_df['id'] = pred_df.index + 1\n",
         "pred_df = pred_df[['id', 'Category']]\n",
-        "pred_df.to_csv('output/extratrees.csv', index=False)"
+        "pred_df.to_csv('output/voting.csv', index=False)"
       ]
     }
   ],
@@ -101,7 +144,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
