--- a/assignments/03/codes/bagging_model.ipynb
+++ b/assignments/03/codes/bagging_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 101,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -30,6 +30,8 @@
         "\n",
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
+        "# df_train['Feature 16'].fillna(df_train['Feature 16'].mean(), inplace=True)\n",
+        "# df_train['Feature 17'].fillna(df_train['Feature 17'].mean(), inplace=True)\n",
         "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "imputer.fit(df_train)\n",
         "\n",
@@ -42,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,195 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Target Variable (Discrete)\n",
-              "1.0     488\n",
-              "0.0     249\n",
-              "2.0     109\n",
-              "6.0      70\n",
-              "5.0      41\n",
-              "8.0       7\n",
-              "14.0      5\n",
-              "7.0       5\n",
-              "15.0      4\n",
-              "4.0       3\n",
-              "13.0      3\n",
-              "3.0       3\n",
-              "9.0       2\n",
-              "12.0      1\n",
-              "17.0      1\n",
-              "11.0      1\n",
-              "10.0      1\n",
-              "16.0      1\n",
-              "Name: count, dtype: int64"
-            ]
-          },
-          "execution_count": 105,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df_imputed['Target Variable (Discrete)'].value_counts()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 110,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[-0.35300642,  1.86526984, -0.95229802,  0.41903394,  0.14193402,\n",
-              "         0.56064079, -0.40846433, -0.41986506,  0.89865619,  1.28663235,\n",
-              "         1.02863444, -0.18268335, -1.19357302,  1.19390121,  0.49132456,\n",
-              "        -0.3119616 , -0.60935857,  0.97064142, -1.00108563, -0.93295979,\n",
-              "        -0.35449325,  0.49124206, 12.        ]])"
-            ]
-          },
-          "execution_count": 110,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "X_train_pd = pd.DataFrame(X_train, columns=df_train.columns[:-1])\n",
-        "X_train_pd['Target Variable (Discrete)'] = y_train\n",
-        "X_train_pd.loc[X_train_pd['Target Variable (Discrete)'] == 12.0].to_numpy()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 107,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Feature 1 (Discrete)</th>\n",
-              "      <th>Feature 2 (Discrete)</th>\n",
-              "      <th>Feature 3 (Discrete)</th>\n",
-              "      <th>Feature 4 (Discrete)</th>\n",
-              "      <th>Feature 5 (Discrete)</th>\n",
-              "      <th>Feature 6 (Discrete)</th>\n",
-              "      <th>Feature 7 (Discrete)</th>\n",
-              "      <th>Feature 8 (Discrete)</th>\n",
-              "      <th>Feature 9</th>\n",
-              "      <th>Feature 10</th>\n",
-              "      <th>Feature 11</th>\n",
-              "      <th>Feature 12</th>\n",
-              "      <th>Feature 13</th>\n",
-              "      <th>Feature 14</th>\n",
-              "      <th>Feature 15</th>\n",
-              "      <th>Feature 18</th>\n",
-              "      <th>Feature 19 (Discrete)</th>\n",
-              "      <th>Feature 20 (Discrete)</th>\n",
-              "      <th>Feature 21 (Discrete)</th>\n",
-              "      <th>Feature 22 (Discrete)</th>\n",
-              "      <th>Feature 23 (Discrete)</th>\n",
-              "      <th>Feature 24</th>\n",
-              "      <th>Target Variable (Discrete)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1.715422</td>\n",
-              "      <td>0.807006</td>\n",
-              "      <td>-0.896040</td>\n",
-              "      <td>0.155038</td>\n",
-              "      <td>0.141934</td>\n",
-              "      <td>0.560641</td>\n",
-              "      <td>-0.408464</td>\n",
-              "      <td>-0.419865</td>\n",
-              "      <td>1.921298</td>\n",
-              "      <td>1.286202</td>\n",
-              "      <td>1.028676</td>\n",
-              "      <td>-0.181829</td>\n",
-              "      <td>-1.191682</td>\n",
-              "      <td>1.193631</td>\n",
-              "      <td>1.349099</td>\n",
-              "      <td>-0.311567</td>\n",
-              "      <td>0.110740</td>\n",
-              "      <td>0.407409</td>\n",
-              "      <td>-0.581928</td>\n",
-              "      <td>-0.378201</td>\n",
-              "      <td>1.718423</td>\n",
-              "      <td>0.502981</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0.495074</td>\n",
-              "      <td>-0.780390</td>\n",
-              "      <td>0.707307</td>\n",
-              "      <td>1.343020</td>\n",
-              "      <td>-0.612517</td>\n",
-              "      <td>0.560641</td>\n",
-              "      <td>-0.408464</td>\n",
-              "      <td>-0.419865</td>\n",
-              "      <td>-0.860103</td>\n",
-              "      <td>1.286456</td>\n",
-              "      <td>1.028530</td>\n",
-              "      <td>-0.182575</td>\n",
-              "      <td>-1.195033</td>\n",
-              "      <td>1.193720</td>\n",
-              "      <td>0.773381</td>\n",
-              "      <td>-0.311963</td>\n",
-              "      <td>-0.819849</td>\n",
-              "      <td>-0.625184</td>\n",
-              "      <td>-1.001086</td>\n",
-              "      <td>-0.905222</td>\n",
-              "      <td>0.490392</td>\n",
-              "      <td>-1.530524</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   Feature 1 (Discrete)  Feature 2 (Discrete)  Feature 3 (Discrete)  Feature 4 (Discrete)  Feature 5 (Discrete)  Feature 6 (Discrete)  Feature 7 (Discrete)  Feature 8 (Discrete)  Feature 9  Feature 10  Feature 11  Feature 12  Feature 13  Feature 14  Feature 15  Feature 18  Feature 19 (Discrete)  Feature 20 (Discrete)  Feature 21 (Discrete)  Feature 22 (Discrete)  Feature 23 (Discrete)  Feature 24  Target Variable (Discrete)\n",
-              "0              1.715422              0.807006             -0.896040              0.155038              0.141934              0.560641             -0.408464             -0.419865   1.921298    1.286202    1.028676   -0.181829   -1.191682    1.193631    1.349099   -0.311567               0.110740               0.407409              -0.581928              -0.378201               1.718423    0.502981                         1.0\n",
-              "1              0.495074             -0.780390              0.707307              1.343020             -0.612517              0.560641             -0.408464             -0.419865  -0.860103    1.286456    1.028530   -0.182575   -1.195033    1.193720    0.773381   -0.311963              -0.819849              -0.625184              -1.001086              -0.905222               0.490392   -1.530524                         1.0"
-            ]
-          },
-          "execution_count": 107,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "X_train_pd.loc[X_train_pd['Target Variable (Discrete)'] == 1.0].head(2)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 104,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -275,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -322,9 +136,6 @@
         "\n",
         "# Initialize Adaboost model\n",
         "model = BaggingClassifier(random_state=42)\n",
-        "\n",
-        "# le = LabelEncoder()\n",
-        "# train_y = le.fit_transform(train_y)\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(train_x, train_y)\n",
