--- a/assignments/03/codes/gradientboost_model.ipynb
+++ b/assignments/03/codes/gradientboost_model.ipynb
@@ -99,30 +99,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gradient Boosting Accuracy: 0.864321608040201\n",
-            "Gradient Boosting Macro F1 Score: 0.28350401468908587\n",
+            "Gradient Boosting Accuracy: 0.8743718592964824\n",
+            "Gradient Boosting Macro F1 Score: 0.3549137200025159\n",
             "\n",
             "Gradient Boosting Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       1.00      0.95      0.97        58\n",
-            "         1.0       0.87      0.96      0.91        93\n",
-            "         2.0       0.79      0.60      0.68        25\n",
-            "         3.0       0.00      0.00      0.00         1\n",
-            "         4.0       0.00      0.00      0.00         1\n",
-            "         5.0       0.67      0.33      0.44         6\n",
-            "         6.0       0.92      1.00      0.96        11\n",
+            "         0.0       0.91      0.96      0.93        50\n",
+            "         1.0       0.94      0.98      0.96       104\n",
+            "         2.0       0.55      0.61      0.58        18\n",
+            "         3.0       0.00      0.00      0.00         0\n",
+            "         4.0       0.00      0.00      0.00         2\n",
+            "         5.0       0.50      0.20      0.29         5\n",
+            "         6.0       1.00      1.00      1.00        11\n",
+            "         7.0       0.00      0.00      0.00         3\n",
             "         8.0       0.00      0.00      0.00         2\n",
-            "         9.0       0.00      0.00      0.00         0\n",
-            "        10.0       0.00      0.00      0.00         0\n",
-            "        12.0       0.00      0.00      0.00         1\n",
-            "        13.0       0.00      0.00      0.00         0\n",
-            "        14.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         0\n",
+            "         9.0       0.00      0.00      0.00         2\n",
+            "        13.0       0.00      0.00      0.00         1\n",
+            "        14.0       0.33      1.00      0.50         1\n",
             "\n",
-            "    accuracy                           0.86       199\n",
-            "   macro avg       0.30      0.27      0.28       199\n",
-            "weighted avg       0.87      0.86      0.86       199\n",
+            "    accuracy                           0.87       199\n",
+            "   macro avg       0.35      0.40      0.35       199\n",
+            "weighted avg       0.84      0.87      0.85       199\n",
             "\n"
           ]
         }
@@ -132,16 +130,13 @@
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
         "# Initialize Adaboost model\n",
-        "model = GradientBoostingClassifier()\n",
-        "\n",
-        "le = LabelEncoder()\n",
-        "train_y = le.fit_transform(train_y)\n",
+        "model = GradientBoostingClassifier(random_state=42)\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(train_x, train_y)\n",
         "\n",
         "# Make predictions on the validation data\n",
-        "predictions = le.inverse_transform(model.predict(val_x))\n",
+        "predictions = model.predict(val_x)\n",
         "\n",
         "# Calculate accuracy and macro F1 score\n",
         "accuracy = accuracy_score(val_y, predictions)\n",
@@ -175,7 +170,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
