--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 160,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 161,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,9 @@
         "\n",
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
-        "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "df_train['Feature 16'].fillna(df_train['Feature 16'].mean(skipna=True), inplace=True)\n",
+        "df_train['Feature 17'].fillna(df_train['Feature 17'].mean(skipna=True), inplace=True)\n",
+        "# df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "imputer.fit(df_train)\n",
         "\n",
         "# Transform the dataset to replace missing values\n",
@@ -40,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 162,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 163,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,8 +67,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Shape of train_x: (795, 22)\n",
-            "Shape of val_x: (199, 22)\n",
+            "Shape of train_x: (795, 24)\n",
+            "Shape of val_x: (199, 24)\n",
             "Shape of train_y: (795,)\n",
             "Shape of val_y: (199,)\n"
           ]
@@ -75,7 +77,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2)\n",
+        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
         "\n",
         "print(\"Shape of train_x:\", train_x.shape)\n",
         "print(\"Shape of val_x:\", val_x.shape)\n",
@@ -85,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 164,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,25 +101,29 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Bagging Accuracy: 0.914572864321608\n",
-            "Bagging Macro F1 Score: 0.47748150007063\n",
+            "Model Accuracy: 0.8693467336683417\n",
+            "Model Macro F1 Score: 0.4768787387870897\n",
             "\n",
-            "Bagging Classification Report:\n",
+            "Model Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.81      1.00      0.89        42\n",
-            "         1.0       1.00      0.94      0.97       108\n",
-            "         2.0       0.78      0.90      0.84        20\n",
-            "         5.0       0.60      0.60      0.60         5\n",
-            "         6.0       1.00      1.00      1.00        18\n",
+            "         0.0       0.84      0.96      0.90        50\n",
+            "         1.0       0.94      0.98      0.96        91\n",
+            "         2.0       0.63      0.73      0.68        26\n",
+            "         3.0       0.00      0.00      0.00         1\n",
+            "         4.0       1.00      1.00      1.00         1\n",
+            "         5.0       1.00      0.50      0.67         8\n",
+            "         6.0       1.00      1.00      1.00        11\n",
             "         7.0       0.00      0.00      0.00         2\n",
-            "        10.0       0.00      0.00      0.00         1\n",
+            "         8.0       0.00      0.00      0.00         5\n",
+            "        11.0       0.00      0.00      0.00         1\n",
             "        13.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         2\n",
+            "        14.0       1.00      1.00      1.00         1\n",
+            "        15.0       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.91       199\n",
-            "   macro avg       0.47      0.49      0.48       199\n",
-            "weighted avg       0.90      0.91      0.90       199\n",
+            "    accuracy                           0.87       199\n",
+            "   macro avg       0.49      0.47      0.48       199\n",
+            "weighted avg       0.83      0.87      0.84       199\n",
             "\n"
           ]
         }
@@ -150,12 +156,12 @@
         "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Bagging Accuracy:\", accuracy)\n",
-        "print(\"Bagging Macro F1 Score:\", macro_f1)\n",
+        "print(\"Model Accuracy:\", accuracy)\n",
+        "print(\"Model Macro F1 Score:\", macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
         "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nBagging Classification Report:\\n\", classification_rep)"
+        "print(\"\\nModel Classification Report:\\n\", classification_rep)"
       ]
     }
   ],
