--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -13,12 +13,12 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.experimental import enable_iterative_imputer\n",
         "from sklearn.impute import IterativeImputer\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder"
+        "from sklearn.preprocessing import StandardScaler"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +29,7 @@
         "y_train = df.iloc[:, -1]\n",
         "X_train = df.iloc[:, :-1]\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
-        "X_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "X_train.drop(columns=['Feature 16', 'Feature 17', 'Feature 18'], inplace=True)\n",
         "imputer.fit(X_train)\n",
         "\n",
         "# Transform the dataset to replace missing values\n",
@@ -39,18 +39,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_test = pd.read_csv('data/iith_foml_2023_test.csv')\n",
-        "df_test.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "df_test.drop(columns=['Feature 16', 'Feature 17', 'Feature 18'], inplace=True)\n",
         "X_test = pd.DataFrame(imputer.transform(df_test), columns=df_test.columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,16 +61,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
         "from sklearn.ensemble import VotingClassifier, BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
         "\n",
         "# Initialize models\n",
-        "bagging_model = BaggingClassifier(random_state=42)\n",
-        "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
-        "randomforest_model = RandomForestClassifier(random_state=42)\n",
+        "bagging_model = BaggingClassifier()\n",
+        "extratrees_model = ExtraTreesClassifier()\n",
+        "randomforest_model = RandomForestClassifier()\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
@@ -88,33 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([12], dtype=int64)"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "xpred = np.asarray([[-0.35300642,  1.86526984, -0.95229802,  0.41903394,  0.14193402,\n",
-        "         0.56064079, -0.40846433, -0.41986506,  0.89865619,  1.28663235,\n",
-        "         1.02863444, -0.18268335, -1.19357302,  1.19390121,  0.49132456,\n",
-        "        -0.3119616 , -0.60935857,  0.97064142, -1.00108563, -0.93295979,\n",
-        "        -0.35449325,  0.49124206]], dtype=float)\n",
-        "ypred = model.predict(xpred)\n",
-        "ypred"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
