Add other models to voting classifier

--- a/assignments/03/codes/bagging_model.ipynb
+++ b/assignments/03/codes/bagging_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 122,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -56,40 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BdtdnmqO0WPZ",
-        "outputId": "2c213020-ecde-4473-fe3e-83fffe5e02e4"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Shape of train_x: (795, 22)\n",
-            "Shape of val_x: (199, 22)\n",
-            "Shape of train_y: (795,)\n",
-            "Shape of val_y: (199,)\n"
-          ]
-        }
-      ],
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
-        "\n",
-        "print(\"Shape of train_x:\", train_x.shape)\n",
-        "print(\"Shape of val_x:\", val_x.shape)\n",
-        "print(\"Shape of train_y:\", train_y.shape)\n",
-        "print(\"Shape of val_y:\", val_y.shape)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -100,60 +67,30 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Bagging Accuracy: 0.864321608040201\n",
-            "Bagging Macro F1 Score: 0.46113991011643485\n",
-            "\n",
-            "Bagging Classification Report:\n",
-            "               precision    recall  f1-score   support\n",
-            "\n",
-            "         0.0       0.89      0.94      0.91        50\n",
-            "         1.0       0.93      0.98      0.95        91\n",
-            "         2.0       0.65      0.77      0.70        26\n",
-            "         3.0       0.00      0.00      0.00         1\n",
-            "         4.0       1.00      1.00      1.00         1\n",
-            "         5.0       0.50      0.38      0.43         8\n",
-            "         6.0       1.00      1.00      1.00        11\n",
-            "         7.0       0.00      0.00      0.00         2\n",
-            "         8.0       0.00      0.00      0.00         5\n",
-            "        11.0       0.00      0.00      0.00         1\n",
-            "        13.0       0.00      0.00      0.00         1\n",
-            "        14.0       1.00      1.00      1.00         1\n",
-            "        15.0       0.00      0.00      0.00         1\n",
-            "\n",
-            "    accuracy                           0.86       199\n",
-            "   macro avg       0.46      0.47      0.46       199\n",
-            "weighted avg       0.82      0.86      0.84       199\n",
-            "\n"
+            "[0.36107555 0.40138866 0.34521766 0.45325601 0.34726945]\n"
           ]
         }
       ],
       "source": [
         "from sklearn.ensemble import BaggingClassifier\n",
-        "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+        "from sklearn.model_selection import cross_val_score\n",
         "\n",
-        "# Initialize Adaboost model\n",
-        "model = BaggingClassifier(random_state=42)\n",
+        "# Initialize model\n",
+        "model = BaggingClassifier()\n",
         "\n",
         "# Train the model on the training data\n",
-        "model.fit(train_x, train_y)\n",
-        "\n",
-        "# Make predictions on the validation data\n",
-        "predictions = model.predict(val_x)\n",
-        "\n",
-        "# Calculate accuracy and macro F1 score\n",
-        "accuracy = accuracy_score(val_y, predictions)\n",
-        "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
-        "\n",
-        "# Display results\n",
-        "print(\"Bagging Accuracy:\", accuracy)\n",
-        "print(\"Bagging Macro F1 Score:\", macro_f1)\n",
-        "\n",
-        "# Classification report for more details\n",
-        "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nBagging Classification Report:\\n\", classification_rep)"
+        "print(cross_val_score(model, X_train, y_train, scoring='f1_macro'))"
       ]
     }
   ],
